--- a/en/feeds/index.html
+++ b/en/feeds/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Articles - Marc-André Goyette</title>
+  <title>Atom/RSS Feeds</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,9 +24,12 @@
     <main>
       <article class="card">
         <div class="card-content">
-          <h1 class="title is-family-secondary">Articles</h1>
-          <p><a href="/en/tags">List of all tags</a></p>
-          <p><span class="article-date has-text-grey-dark">2020-05-18</span> <a href="/en/introduction/">Introduction</a></p>
+          <h1 class="title is-family-secondary">Atom/RSS Feeds</h1>
+          <p>Atom feeds (also compatible with RSS software) for articles in English.</p>
+          <p>
+          <p><a href="/feeds/languages/en/atom.xml">All articles</a></p>
+          </p>
+          <p><a href="/feeds/languages/en/tags/programming/atom.xml">Articles with the tag Programming</a></p>
         </div>
       </article>
     </main>
