--- a/fr/fils/index.html
+++ b/fr/fils/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <title>Articles - Marc-André Goyette</title>
+  <title>Fils Atom/RSS</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,9 +24,13 @@
     <main>
       <article class="card">
         <div class="card-content">
-          <h1 class="title is-family-secondary">Articles</h1>
-          <p><a href="/fr/tags">Liste de tous les tags</a></p>
-          <p><span class="article-date has-text-grey-dark">2020-05-18</span> <a href="/fr/introduction/">Introduction</a></p>
+          <h1 class="title is-family-secondary">Fils Atom/RSS</h1>
+          <p>Fils Atom (aussi compatibles avec les logiciels RSS) pour les articles en français.</p>
+          <p>
+          <p><a href="/feeds/languages/fr/atom.xml">Tous les articles</a></p>
+          </p>
+          <p><a href="/feeds/languages/fr/tags/fiction-interactive/atom.xml">Articles avec le tag Fiction interactive</a></p>
+          <p><a href="/feeds/languages/fr/tags/programmation/atom.xml">Articles avec le tag Programmation</a></p>
         </div>
       </article>
     </main>
