--- a/en/introduction/index.html
+++ b/en/introduction/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="navbar-brand is-family-secondary"><a href="/en" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div>
       <div id="topNavbar" class="navbar-menu is-active">
-        <div class="navbar-start"><a href="/en/articles" class="navbar-item is-tab">Articles</a> <a href="/en/about" class="navbar-item is-tab">About</a> <a href="/feeds/languages/en/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
+        <div class="navbar-start"><a href="/en/articles" class="navbar-item is-tab">Articles</a> <a href="/en/about" class="navbar-item is-tab">About</a> </div>
       </div>
     </div>
   </nav>
@@ -24,7 +24,7 @@
     <main>
       <article class="card">
         <div class="card-content">
-          <div class="date has-text-grey-dark has-text-right">Written on 21 April 2019</div>
+          <div class="date has-text-grey-dark has-text-right">Written on 18 May 2020</div>
           <div class="content"><a href="/en/introduction/">
               <h1 class="title is-family-secondary">Introduction</h1>
             </a>
@@ -41,11 +41,15 @@
 </code></pre>
             </div>
           </div>
+          <div class="article-footer">
+            <p><a href="/en/articles">All articles</a></p>
+            <p><a href="/en/tags/programming/">Articles with the tag Programming</a></p>
+          </div>
         </div>
       </article>
     </main>
     <footer class="footer">
-      <p>Copyright © 2019-2020 Marc-André Goyette | <a href="https://github.com/magoyette/magoyette.github.io">Source code</a></p>
+      <p>Copyright © 2019-2020 Marc-André Goyette | <a href="https://github.com/magoyette/magoyette.github.io">Source code</a> | <a href="/en/feeds">Atom/RSS Feeds</a></p>
       <p>The content of this site is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/">Creative Commons License (CC BY-ND 4.0)</a>.</p>
       <p>Opinions expressed on this site are solely my own, not those of my present or past employers.</p>
     </footer>
