--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="navbar-brand is-family-secondary"><a href="/" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div>
       <div id="topNavbar" class="navbar-menu is-active">
-        <div class="navbar-start"><a href="/fr/articles" class="navbar-item is-tab">Articles</a> <a href="/fr/a-propos" class="navbar-item is-tab">À propos</a> <a href="/feeds/languages/fr/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
+        <div class="navbar-start"><a href="/fr/articles" class="navbar-item is-tab">Articles</a> <a href="/fr/a-propos" class="navbar-item is-tab">À propos</a> </div>
       </div>
     </div>
   </nav>
@@ -24,7 +24,7 @@
     <main>
       <article class="card">
         <div class="card-content">
-          <div class="date has-text-grey-dark has-text-right">Écrit le 21 avril 2019</div>
+          <div class="date has-text-grey-dark has-text-right">Écrit le 18 mai 2020</div>
           <div class="content"><a href="/fr/introduction/">
               <h1 class="title is-family-secondary">Introduction</h1>
             </a>
@@ -41,11 +41,16 @@
 </code></pre>
             </div>
           </div>
+          <div class="article-footer">
+            <p><a href="/fr/articles">Tous les articles</a></p>
+            <p><a href="/fr/tags/fiction-interactive/">Articles avec le tag Fiction interactive</a></p>
+            <p><a href="/fr/tags/programmation/">Articles avec le tag Programmation</a></p>
+          </div>
         </div>
       </article>
     </main>
     <footer class="footer">
-      <p>Copyright © 2019-2020 Marc-André Goyette | <a href="https://github.com/magoyette/magoyette.github.io">Code source</a></p>
+      <p>Copyright © 2019-2020 Marc-André Goyette | <a href="https://github.com/magoyette/magoyette.github.io">Code source</a> | <a href="/fr/fils">Fils Atom/RSS</a></p>
       <p>Le contenu de ce site est disponible selon les termes d&#x27;une <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/deed.fr">licence Creative Commons (CC BY-ND 4.0)</a>.</p>
       <p>Les opinions exprimées sur ce site sont uniquement les miennes et ne représentent pas celles de mes employeurs actuels ou passés.</p>
     </footer>
