--- a/en/index.html
+++ b/en/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="navbar-brand is-family-secondary"><a href="/en" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div>
       <div id="topNavbar" class="navbar-menu is-active">
-        <div class="navbar-start"><a href="/en/articles" class="navbar-item is-tab">Articles</a> <a href="/en/about" class="navbar-item is-tab">About</a> </div>
+        <div class="navbar-start"><a href="/en/articles" class="navbar-item is-tab">Articles</a> <a href="/en/about" class="navbar-item is-tab">About</a> <a href="/" class="navbar-item is-tab">Français</a> </div>
       </div>
     </div>
   </nav>
@@ -49,7 +49,8 @@
       </article>
     </main>
     <footer class="footer">
-      <p>Copyright © 2019-2020 Marc-André Goyette | <a href="https://github.com/magoyette/magoyette.github.io">Source code</a> | <a href="/en/feeds">Atom/RSS Feeds</a></p>
+      <p>Copyright © 2019-2020 Marc-André Goyette </p>
+      <p><a href="/en/articles">Articles</a> | <a href="/en/about">About</a> | <a href="/en/feeds">Atom/RSS Feeds</a> | <a href="/">Français</a> | <a href="https://github.com/magoyette/magoyette.github.io">Source code</a></p>
       <p>The content of this site is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/">Creative Commons License (CC BY-ND 4.0)</a>.</p>
       <p>Opinions expressed on this site are solely my own, not those of my present or past employers.</p>
     </footer>
