--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html><head><title>https://marcandregoyette.com/fr/</title><link rel="canonical" href="https://marcandregoyette.com/fr/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://marcandregoyette.com/fr/" /></head></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>https://marcandregoyette.com/fr/</title>
+    <link rel="canonical" href="https://marcandregoyette.com/fr/" />
+    <meta name="robots" content="noindex" />
+    <meta charset="utf-8" />
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://marcandregoyette.com/fr/"
+    />
+  </head>
+  <body>
+      <p>Redirecting to <a href="https://marcandregoyette.com/fr/">https://marcandregoyette.com/fr/</a></p>
+  </body>
+</html>
