--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
   <head>
     <title>https://marcandregoyette.com/fr/</title>
-    <link rel="canonical" href="https://marcandregoyette.com/fr/" />
-    <meta name="robots" content="noindex" />
-    <meta charset="utf-8" />
-    <meta
-      http-equiv="refresh"
-      content="0; url=https://marcandregoyette.com/fr/"
-    />
+    <link rel="canonical" href="https://marcandregoyette.com/fr/"/>
+    <meta name="robots" content="noindex">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="refresh" content="0; url=https://marcandregoyette.com/fr/"/>
   </head>
   <body>
-      <p>Redirecting to <a href="https://marcandregoyette.com/fr/">https://marcandregoyette.com/fr/</a></p>
+    <h1>Redirection</h1>
+    <p>Redirecting to <a href="https://marcandregoyette.com/fr/">https://marcandregoyette.com/fr/</a></p>
   </body>
 </html>
