--- a/en/index.html
+++ b/en/index.html
@@ -35,7 +35,7 @@
   </div>
 </nav>
 <div class="container">
-<main aria-role="main">
+<main>
   
   <article class="card">
     <div class="card-content">
