--- a/fr/404.html
+++ b/fr/404.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 <div class="container">
-<main aria-role="main">
+<main>
   <article class="card">
     <div class="card-content">
       <p>This page doesn't exists.</p>
