--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>https://marcandregoyette.com/fr/</title>
-    <link rel="canonical" href="https://marcandregoyette.com/fr/"/>
+    <title>https://marcandregoyette.com/en/</title>
+    <link rel="canonical" href="https://marcandregoyette.com/en/"/>
     <meta name="robots" content="noindex">
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <meta http-equiv="refresh" content="0; url=https://marcandregoyette.com/fr/"/>
+    <meta http-equiv="refresh" content="0; url=https://marcandregoyette.com/en/"/>
   </head>
   <body>
     <h1>Redirection</h1>
-    <p>Redirecting to <a href="https://marcandregoyette.com/fr/">https://marcandregoyette.com/fr/</a></p>
+    <p>Redirecting to <a href="https://marcandregoyette.com/en/">https://marcandregoyette.com/en/</a></p>
   </body>
 </html>
