--- a/fr/introduction/index.html
+++ b/fr/introduction/index.html
@@ -83,7 +83,7 @@
     <a href="https://github.com/magoyette/magoyette.github.io">Code source</a>
   </p>
   <p>
-    Le contenu de ce site est disponible selon les termes d&#x27;une
+    Les articles et le texte de ce site sont disponibles sous une
     <a
       rel="license"
       href="https://creativecommons.org/licenses/by-nd/4.0/deed.fr"
