--- a/en/404.html
+++ b/en/404.html
@@ -40,7 +40,7 @@
 </main>
 
 <footer class="footer">
-  <p>Copyright © 2019-2020 Marc-André Goyette</p>
+  <p>Copyright © 2019-2021 Marc-André Goyette</p>
   <p>
     <a href="/en/articles">Articles</a> |
     <a href="/en/tags">Tags</a> |
@@ -48,11 +48,11 @@
     
     <a href="/fr">Français</a> |
     
-    <a href="/en/feeds/">Atom/RSS Feeds</a> |
+    <a href="/en/feeds/">Atom Feeds</a> |
     <a href="https://github.com/magoyette/magoyette.github.io">Source code</a>
   </p>
   <p>
-    The content of this site is licensed under a
+    Articles and the text of this site are licensed under a
     <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/"
       >Creative Commons License (CC BY-ND 4.0)</a
     >.
