--- a/fr/fils/index.html
+++ b/fr/fils/index.html
@@ -11,6 +11,10 @@
     content="Essais de Marc-André Goyette sur le développement logiciel, la fiction interactive et la littérature."
   />
   <link type="text/css" rel="stylesheet" href="/styles.css" />
+  
+  <link rel="alternate" type="application/atom+xml" href="/fr/atom.xml" title="Flux Atom">
+  
+
 </head>
 <body><nav aria-label="main navigation" class="navbar is-primary">
   <div class="container">
@@ -72,7 +76,7 @@ les articles écrits en français.</p>
 </main>
 
 <footer class="footer">
-  <p>Copyright © 2020 Marc-André Goyette</p>
+  <p>Copyright © 2020-2021 Marc-André Goyette</p>
   <p>
     <a href="/fr/articles">Articles</a> |
     <a href="/fr/tags">Tags</a> |
