--- a/en/about/index.html
+++ b/en/about/index.html
@@ -41,7 +41,7 @@
   <article class="card">
     <div class="card-content">
       <div class="date has-text-grey-dark has-text-right">
-        2020-07-31
+        July 31, 2020
       </div>
       <div class="content">
         <a href="/fr/introduction/">
