--- a/fr/fils/index.html
+++ b/fr/fils/index.html
@@ -42,7 +42,7 @@
   <article class="card">
     <div class="card-content">
       <div class="date has-text-grey-dark has-text-right">
-        2020-07-31
+        31 juillet 2020
       </div>
       <div class="content">
         <a href="/fr/introduction/">
