--- a/en/about/index.html
+++ b/en/about/index.html
@@ -37,22 +37,19 @@
   </div>
 </nav>
 <div class="container">
-<main>
-  <article class="card">
-    <div class="card-content">
-      <div class="date has-text-grey-dark has-text-right">
-        July 31, 2020
-      </div>
-      <div class="content">
-        <a href="/fr/introduction/">
-          <h1 class="title is-family-secondary">About</h1>
-        </a>
+<main><article class="card">
+  <div class="card-content">
+    
+    <div class="content">
+      <a href="/en/about/">
+        <h1 class="title is-family-secondary">About</h1>
+      </a>
 
-        <p>This is my personal web site.</p>
+      <p>This is my personal web site.</p>
 <p>For more details on the web site itself, see the <a href="../colophon/">colophon</a>.</p>
 
-      </div></div>
-  </article>
+    </div></div>
+</article>
 </main>
 
 <footer class="footer">
