--- a/en/colophon/index.html
+++ b/en/colophon/index.html
@@ -37,18 +37,15 @@
   </div>
 </nav>
 <div class="container">
-<main>
-  <article class="card">
-    <div class="card-content">
-      <div class="date has-text-grey-dark has-text-right">
-        July 31, 2020
-      </div>
-      <div class="content">
-        <a href="/fr/introduction/">
-          <h1 class="title is-family-secondary">Colophon</h1>
-        </a>
+<main><article class="card">
+  <div class="card-content">
+    
+    <div class="content">
+      <a href="/en/colophon/">
+        <h1 class="title is-family-secondary">Colophon</h1>
+      </a>
 
-        <h2 id="constraints">Constraints</h2>
+      <h2 id="constraints">Constraints</h2>
 <p>I chose to adopt some constraints while building this web site.</p>
 <p><strong>Static site</strong>: The web site will be static and generated with my own static site generator.</p>
 <p><strong>JavaScript</strong>: Avoid as much as possible the use of JavaScript.</p>
@@ -57,8 +54,8 @@
 <p>The text on this web site use <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, an open source font created by <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>.</p>
 <p>Code blocks use a monospace font that varies depending on the fonts installed on the operating system.</p>
 
-      </div></div>
-  </article>
+    </div></div>
+</article>
 </main>
 
 <footer class="footer">
