--- a/en/feeds/index.html
+++ b/en/feeds/index.html
@@ -37,18 +37,15 @@
   </div>
 </nav>
 <div class="container">
-<main>
-  <article class="card">
-    <div class="card-content">
-      <div class="date has-text-grey-dark has-text-right">
-        July 31, 2020
-      </div>
-      <div class="content">
-        <a href="/fr/introduction/">
-          <h1 class="title is-family-secondary">Atom Feeds</h1>
-        </a>
+<main><article class="card">
+  <div class="card-content">
+    
+    <div class="content">
+      <a href="/en/feeds/">
+        <h1 class="title is-family-secondary">Atom Feeds</h1>
+      </a>
 
-        <h2 id="main-feed">Main Feed</h2>
+      <h2 id="main-feed">Main Feed</h2>
 <p>The English version of this web site has a <a href="/en/atom.xml">main Atom feed</a> that includes all
 articles written in English.</p>
 <h2 id="tag-feeds">Tag Feeds</h2>
@@ -70,8 +67,8 @@ articles written in English.</p>
 <p>The Atom feeds of the French version of this web site are available on the
 <a href="/fr/fils/">French version of this web page</a>.</p>
 
-      </div></div>
-  </article>
+    </div></div>
+</article>
 </main>
 
 <footer class="footer">
