--- a/fr/fils/index.html
+++ b/fr/fils/index.html
@@ -38,18 +38,15 @@
   </div>
 </nav>
 <div class="container">
-<main>
-  <article class="card">
-    <div class="card-content">
-      <div class="date has-text-grey-dark has-text-right">
-        31 juillet 2020
-      </div>
-      <div class="content">
-        <a href="/fr/introduction/">
-          <h1 class="title is-family-secondary">Fils Atom</h1>
-        </a>
+<main><article class="card">
+  <div class="card-content">
+    
+    <div class="content">
+      <a href="/fr/fils/">
+        <h1 class="title is-family-secondary">Fils Atom</h1>
+      </a>
 
-        <h2 id="fil-principal">Fil principal</h2>
+      <h2 id="fil-principal">Fil principal</h2>
 <p>La version francophone de ce site web a un <a href="/fr/atom.xml">fil Atom principal</a> qui inclut tous
 les articles écrits en français.</p>
 <h2 id="fils-pour-les-tags">Fils pour les tags</h2>
@@ -71,8 +68,8 @@ les articles écrits en français.</p>
 <p>Pour avoir les fils Atom de la version anglophone de ce site, il suffit de visiter
 <a href="/en/feeds/">cette page en anglais</a>.</p>
 
-      </div></div>
-  </article>
+    </div></div>
+</article>
 </main>
 
 <footer class="footer">
