--- a/fr/a-propos/index.html
+++ b/fr/a-propos/index.html
@@ -38,22 +38,19 @@
   </div>
 </nav>
 <div class="container">
-<main>
-  <article class="card">
-    <div class="card-content">
-      <div class="date has-text-grey-dark has-text-right">
-        31 juillet 2020
-      </div>
-      <div class="content">
-        <a href="/fr/introduction/">
-          <h1 class="title is-family-secondary">À propos</h1>
-        </a>
+<main><article class="card">
+  <div class="card-content">
+    
+    <div class="content">
+      <a href="/fr/a-propos/">
+        <h1 class="title is-family-secondary">À propos</h1>
+      </a>
 
-        <p>Ce site est mon site web personnel.</p>
+      <p>Ce site est mon site web personnel.</p>
 <p>Pour plus de détails à propos du site web lui-même, consultez le <a href="../colophon/">colophon</a>.</p>
 
-      </div></div>
-  </article>
+    </div></div>
+</article>
 </main>
 
 <footer class="footer">
