--- a/fr/colophon/index.html
+++ b/fr/colophon/index.html
@@ -38,18 +38,15 @@
   </div>
 </nav>
 <div class="container">
-<main>
-  <article class="card">
-    <div class="card-content">
-      <div class="date has-text-grey-dark has-text-right">
-        31 juillet 2020
-      </div>
-      <div class="content">
-        <a href="/fr/introduction/">
-          <h1 class="title is-family-secondary">Colophon</h1>
-        </a>
+<main><article class="card">
+  <div class="card-content">
+    
+    <div class="content">
+      <a href="/fr/colophon/">
+        <h1 class="title is-family-secondary">Colophon</h1>
+      </a>
 
-        <h2 id="contraintes">Contraintes</h2>
+      <h2 id="contraintes">Contraintes</h2>
 <p>J&rsquo;ai choisi d&rsquo;adopter certaines contraintes lors de la création de ce site web.</p>
 <p><strong>Site statique</strong>: Créer un site statique généré avec mon propre générateur de site statique.</p>
 <p><strong>JavaScript</strong>: Éviter le plus possible l&rsquo;utilisation de JavaScript.</p>
@@ -58,8 +55,8 @@
 <p>Les textes de ce site web utilisent <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, une police de caractères libre créée par <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>.</p>
 <p>Les blocs de code utilisent une police monospace qui varie en fonction des polices installées sur le système.</p>
 
-      </div></div>
-  </article>
+    </div></div>
+</article>
 </main>
 
 <footer class="footer">
