--- a/fr/fictions/index.html
+++ b/fr/fictions/index.html
@@ -36,18 +36,15 @@
   </div>
 </nav>
 <div class="container">
-<main>
-  <article class="card">
-    <div class="card-content">
-      <div class="date has-text-grey-dark has-text-right">
-        31 juillet 2020
-      </div>
-      <div class="content">
-        <a href="/fr/introduction/">
-          <h1 class="title is-family-secondary">Fictions</h1>
-        </a>
+<main><article class="card">
+  <div class="card-content">
+    
+    <div class="content">
+      <a href="/fr/fictions/">
+        <h1 class="title is-family-secondary">Fictions</h1>
+      </a>
 
-        <p>J&rsquo;ai commencé depuis la fin de 2019 à écrire des fictions interactives (aussi connues sous le nom de fictions hypertextuelles).</p>
+      <p>J&rsquo;ai commencé depuis la fin de 2019 à écrire des fictions interactives (aussi connues sous le nom de fictions hypertextuelles).</p>
 <p>Ce sont des récits non-linéaires qui demandent au lecteur de faire des choix qui influencent l&rsquo;histoire, un peu comme un livre dont vous êtes le héros ou un jeu vidéo d&rsquo;aventures textuelles.</p>
 <h2 id="qui-a-volé-mon-parser">Qui a volé mon parser?</h2>
 <p><a href="https://magoyette.itch.io/qui-a-vole-mon-parser">Qui a volé mon parser?</a> raconte l&rsquo;aventure d&rsquo;un détective amateur de fictions interactives à la recherche de son parser volé.</p>
@@ -56,8 +53,8 @@
 <p><a href="https://magoyette.itch.io/duel-contre-le-pere-noel">Duel contre le Père Noël</a> raconte l&rsquo;histoire d&rsquo;un enfant insatisfait qui veut capturer le Père Noël.</p>
 <p>L&rsquo;histoire a été écrite dans le cadre de la <a href="https://itch.io/jam/fr-partim-500-an-2019">Partim 500</a>, un événement d&rsquo;écriture de fictions interactives de 500 mots ou moins.</p>
 
-      </div></div>
-  </article>
+    </div></div>
+</article>
 </main>
 
 <footer class="footer">
