--- a/en/feeds/index.html
+++ b/en/feeds/index.html
@@ -72,9 +72,9 @@ articles written in English.</p>
     </div></div>
 </article>
 </main>
-
 <footer class="footer">
-  <p>Copyright © 2020-2021 Marc-André Goyette</p>
+  <p>Copyright © 2020-2023 Marc-André Goyette</p>
+
   <p>
     <a href="/en/articles">Articles</a> |
     <a href="/en/tags">Tags</a> |
@@ -97,8 +97,7 @@ articles written in English.</p>
     Opinions expressed on this site are solely my own, not those of my present
     or past employers.
   </p>
-</footer>
 
-</div>
+</footer></div>
   </body>
 </html>
