--- a/fr/colophon/index.html
+++ b/fr/colophon/index.html
@@ -60,9 +60,9 @@
     </div></div>
 </article>
 </main>
-
 <footer class="footer">
-  <p>Copyright © 2020-2021 Marc-André Goyette</p>
+  <p>Copyright © 2020-2023 Marc-André Goyette</p>
+
   <p>
     <a href="/fr/articles">Articles</a> |
     <a href="/fr/tags">Tags</a> |
@@ -88,8 +88,7 @@
     Les opinions exprimées sur ce site sont uniquement les miennes et ne
     représentent pas celles de mes employeurs actuels ou passés.
   </p>
-</footer>
 
-</div>
+</footer></div>
   </body>
 </html>
