--- a/en/colophon/index.html
+++ b/en/colophon/index.html
@@ -59,9 +59,9 @@
     </div></div>
 </article>
 </main>
-
 <footer class="footer">
-  <p>Copyright © 2020-2021 Marc-André Goyette</p>
+  <p>Copyright © 2020-2023 Marc-André Goyette</p>
+
   <p>
     <a href="/en/articles">Articles</a> |
     <a href="/en/tags">Tags</a> |
@@ -84,8 +84,7 @@
     Opinions expressed on this site are solely my own, not those of my present
     or past employers.
   </p>
-</footer>
 
-</div>
+</footer></div>
   </body>
 </html>
