--- a/fr/fils/index.html
+++ b/fr/fils/index.html
@@ -73,9 +73,9 @@ les articles écrits en français.</p>
     </div></div>
 </article>
 </main>
-
 <footer class="footer">
-  <p>Copyright © 2020-2021 Marc-André Goyette</p>
+  <p>Copyright © 2020-2023 Marc-André Goyette</p>
+
   <p>
     <a href="/fr/articles">Articles</a> |
     <a href="/fr/tags">Tags</a> |
@@ -101,8 +101,7 @@ les articles écrits en français.</p>
     Les opinions exprimées sur ce site sont uniquement les miennes et ne
     représentent pas celles de mes employeurs actuels ou passés.
   </p>
-</footer>
 
-</div>
+</footer></div>
   </body>
 </html>
