--- a/fr/introduction/index.html
+++ b/fr/introduction/index.html
@@ -75,9 +75,9 @@
 </div>
 </article>
 </main>
-
 <footer class="footer">
-  <p>Copyright © 2020-2021 Marc-André Goyette</p>
+  <p>Copyright © 2020-2023 Marc-André Goyette</p>
+
   <p>
     <a href="/fr/articles">Articles</a> |
     <a href="/fr/tags">Tags</a> |
@@ -103,8 +103,7 @@
     Les opinions exprimées sur ce site sont uniquement les miennes et ne
     représentent pas celles de mes employeurs actuels ou passés.
   </p>
-</footer>
 
-</div>
+</footer></div>
   </body>
 </html>
